# license-facade-service

./: README.md  pyproject.toml
docs/: specification.md
src/license_facade_service/: main.py
src/license_facade_service/api/v1/: licenses.py  metrics.py
